# software_render

./: CMakeLists.txt  geometry.h  main.cpp
___cmake_auxiliary/: CMakeAuxiliary.cmake  CMakeTargetDefenition.cmake
___cmake_modules/: FindFFMPEG.cmake  FindIPP.cmake  FindLibConfig.cmake  FindOpenCV.cmake  FindSDL.cmake  FindSDL2.cmake
file_system/: CMakeLists.txt  wavefront_obj.cpp  wavefront_obj.hpp
geometry/: CMakeLists.txt  geometry.hpp  primitives.hpp  size2.hpp  vec2.hpp  vec3.hpp  vecN.hpp
model/: CMakeLists.txt  model.cpp  model.hpp
render/: CMakeLists.txt  render.hpp
sdl/: CMakeLists.txt  sdl.hpp
sdl/color/: CMakeLists.txt
sdl/common/: CMakeLists.txt  common.cpp  common.hpp
sdl/control/: CMakeLists.txt  control.cpp  control.hpp
sdl/render/: CMakeLists.txt  render.cpp  render.hpp
sdl/surface/: CMakeLists.txt  surface.cpp  surface.hpp
sdl/system/: CMakeLists.txt  system.cpp  system.hpp
sdl/text/: CMakeLists.txt  text.cpp  text.hpp
sdl/texture/: CMakeLists.txt  texture.cpp  texture.hpp
sdl/window/: CMakeLists.txt  window.cpp  window.hpp
software_render/: CMakeLists.txt  common.hpp  line.hpp  mesh.hpp  software_render.hpp  surf.hpp  triangle.hpp  zbuffer.hpp
